--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,8 +1,6 @@
 .header-wrapper {
-    display: block;
-   
+    display: block;  
 }
-
 .menu{
    display: flex;
    justify-content: space-around;
@@ -30,22 +28,24 @@
     text-transform: uppercase;
 }
 
-.logo {
-    width: 35%;
-   
+.logo{
+    display: inline-block;
+    width: 20%; 
+    margin-left: 100px;
 }
-
-  
-
- 
-
-.logo p {
+.logo span {
     font-family: Merriweather;
     font-style: normal;
     font-weight: 900;
     font-size: 36px;
     line-height: 50px;   
     color: #005FA3;
+    margin-left:  30px;
+}
+
+.logo a img{
+    display: inline;
+
 }
 
   /* @media (max-width: 600px) {
@@ -54,31 +54,31 @@
     }
   } */
     
-    .top_line {
-        display: flex;
-        justify-content: space-around;
-        flex-wrap: wrap;
-        align-items: flex-end;
-        align-content: flex-end;       
-        width: 60%;
-        list-style: none;
-        font-family: Lato;
-        font-size: 13px;
-        line-height: 17px;
-        color: #000000;
-        float: right;
-        
-    }
-    li:first-child{        
-        list-style-image: url(../components/img/Vector.png);
-    }
-    li:nth-child(2n){        
-        list-style-image: url(../components/img/Frame.png);
-    }
-    li:nth-child(3n){        
-        list-style-image: url(../components/img/Group.png);
-    }
-    li:nth-child(4n){        
-        list-style-image: url(../components/img/placeholder.png);
-    }
+.top_line {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    align-items: flex-end;
+    align-content: flex-end;       
+    width: 60%;
+    list-style: none;
+    font-family: Lato;
+    font-size: 13px;
+    line-height: 17px;
+    color: #000000;
+    float: right;
+    
+}
+li:first-child{        
+    list-style-image: url(../img/Vector.png);
+}
+li:nth-child(2n){        
+    list-style-image: url(../img/Frame.png);
+}
+li:nth-child(3n){        
+    list-style-image: url(../img/Group.png);
+}
+li:nth-child(4n){        
+    list-style-image: url(../img/placeholder.png);
+}
 
