--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -4,7 +4,7 @@
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
-    margin: 100px 0;
+    margin: 12% 0;
 }
 
 .about_info{
@@ -15,22 +15,23 @@
     font-family: Lato;
     font-style: normal;
     font-weight: 900;
-    font-size: 24px;
-    line-height: 33px;
+    font-size: 1.5em;
+    line-height: 1em;
     color: #BDBDBD;
 }
 .about_info p{
     font-family: Lato;
     font-style: normal;
     font-weight: 300;
-    font-size: 18px;
-    line-height: 25px;
+    font-size: 1.1em;
+    line-height: 1.6em;
     color: #000000;
-    margin: 40px 0;
+    margin: 15% 0;
+    word-wrap: break-word;
 }
 
 .about_cards{
-    width: 45%;
+    width: 40%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around; 
@@ -46,7 +47,7 @@
     width: 255px;
     height: 255px;
     background: #EBEBEB;
-    margin-top: 25px;
+    margin-top: 16%;
 }
 
 .card:hover{
@@ -67,7 +68,7 @@
     font-family: Lato;
     font-style: normal;
     font-weight: 900;
-    font-size: 55px;
+    font-size: 3.4em;
     line-height: 66px;
     letter-spacing: 0.1em;
     text-transform: uppercase;
@@ -78,9 +79,8 @@
 .card p {
     font-family: Lato;
     font-style: normal;
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 18px;
+    font-weight:0.88em;
+    line-height: 1.1em;
     color: #000000;
 }
 
@@ -89,12 +89,27 @@
     font-family: Lato;
     font-style: normal;
     font-weight: bold;
-    font-size: 14px;
-    line-height: 17px;
+    font-size: 0.88em;
+    line-height: 1.1em;
     text-decoration-line: underline;
     color: #005FA3;
 }
 .card h1, .card a, .card p{
-    margin-left: 50px;
+    margin-left: 8%;
     text-align: left;
+}
+
+@media screen and (max-width: 991px) {
+    /* стили для больших планшетов - начало */
+
+}
+
+@media screen and (max-width: 767px) {
+/* стили для средних планшетов - начало */
+
+}
+
+@media screen and (max-width: 370px) {
+/* стили для телефонов - начало */
+
 }
