--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,22 +1,23 @@
-body {
+body, html {
     margin: 0;
-    font-size: 20px;
-    line-height: 1.7;
-    font-weight: 400;
-    background: #fff;
-    color: #454545;
-    font-family: -apple-system, BlinkMacSystemFont, Roboto, 'Segoe UI', 'Fira Sans', Avenir, 'Helvetica Neue',
-      'Lucida Grande', sans-serif;
-    text-rendering: optimizeLegibility;
+    padding:0;
+    
   }
 
-
-  a {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
+  .app_wrapper{
+    width: 100%;
+    max-width: 1920px;
+    margin: 0 auto;
   }
 
-  a:hover {
-    color: #166281;
-  }
+  @media only screen and (min-width : 320px) and (max-width : 479px) {
+
+    /*Тут будет CSS код для разрешения 320 пикселей и до 479 пикселей*/
+    
+    }
+
+    
+@media only screen and (min-width : 768px) and (max-width : 1023px) {
+  
+
+}
