--- a/src/styles/Reviews.css
+++ b/src/styles/Reviews.css
@@ -1,31 +1,33 @@
 .reviews_wrapper{
-    height: 800px;
+    height: 50%;
 }
 
 .reviews_wrapper h2{
     font-family: Lato;
     font-style: normal;
     font-weight: 900;
-    font-size: 24px;
-    line-height: 33px;
+    font-size: 1.5em;
+    line-height: 2.1em;
     color: #BDBDBD;
-    margin:100px 200px ;
+    margin: 5.3% 10% ;
 }
 
 .reviews_wrapper p{
     font-family: Merriweather;
     font-style: normal;
     font-weight: 900;
-    font-size: 64px;
-    line-height: 69px;
+    font-size: 4em;
+    line-height: 4.3em;
     color: #333333; 
-    margin:50px 200px;
+    margin:2.1% 10%;
+    padding:0;
 }
 .reviews_block{
     margin: 0 auto;
     width: 70%;
     background: #EBEBEB;
-    padding: 50px;
+    padding: 3.1%;
+    margin-bottom: 25%;
 }
 
 .reviews_text p{
@@ -35,27 +37,29 @@
     font-family: Lato;
     font-style: normal;
     font-weight: 300;
-    font-size: 18px;
-    line-height: 25px;
+    font-size: 1.1em;
+    line-height: 1.6em;
     color: #000000;
 }
 .reviews_data_foto img{
     display: inline;
+    max-width: 100%;
+
 }
 .reviews_data{
     display: flex;
     /* flex-wrap: wrap; */
     justify-content: flex-start;
     align-items: center;
-    margin: 20px 50px 0;
+    margin: 1.3% 3.1% 0;
 }
 
 .reviews_data_info h3{
     font-family: Lato;
     font-style: normal;
     font-weight: 900;
-    font-size: 18px;
-    line-height: 25px;
+    font-size: 1.1em;
+    line-height: 1.6em;
     color: #000000;
     margin: 0;
 }
@@ -64,10 +68,11 @@
     font-family: Lato;
     font-style: normal;
     font-weight: normal;
-    font-size: 14px;
-    line-height: 19px;
+    font-size: 0.88em;
+    line-height: 1.2em;
     color: #4F4F4F;
     margin:0;
+    word-wrap: break-word;
 }
 
 .dots{
