--- a/src/styles/Specialize.css
+++ b/src/styles/Specialize.css
@@ -2,14 +2,11 @@
     background: #EBEBEB;
     width: 100%;
     padding-top: 10%;
-    padding-bottom:10%;
-
-        
+    padding-bottom:10%;        
 }
 
 .spec_title{
-    margin-left: 13%;
-          
+    margin-left: 21%;          
 }
 
 .spec_title p, h2{
@@ -19,8 +16,7 @@
     font-size: 24px;
     line-height: 33px;
     color: #BDBDBD; 
-    
-   
+    padding:0;   
     
 }
 .spec_title h2 {
@@ -29,7 +25,7 @@
 }
 
 .spec_block{
-    width: 80%;
+    width: 60%;
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
@@ -49,6 +45,7 @@
 }
 .spec_item a{
     color: white;
+    text-decoration: none;
 }
 
 .spec_item:hover{
